gccida/g2/ix86_force_to_memory
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_force_to_memory/src/i386.c:12634:28: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  ix86_force_to_memory( machine_mode mode, rtx operand) 
                           ^
                           enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_force_to_memory/src/i386.c:12645:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_force_to_memory/src/i386.c:12661:30: error: use of undeclared identifier 'machine_mode'
v9 = gen_rtx_fmt_ee( PLUS, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), global_rtl[2], v8); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_force_to_memory/src/i386.c:12698:33: error: use of undeclared identifier 'machine_mode'
v17 = gen_rtx_fmt_e( PRE_DEC, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), global_rtl[2]); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_force_to_memory/src/i386.c:12704:33: error: use of undeclared identifier 'machine_mode'
v12 = gen_rtx_fmt_e( PRE_DEC, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), global_rtl[2]); 
                                ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_force_to_memory/src/obj/i386.o] Error 1
